--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
 	<title>Integratic</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<header>
+	<header class="header">
 		<nav>
 			<ul>
 				<li>Mapa</li>
