Directiva angularjs google maps

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 					<a href="#/vehicle">Vehículos</a>
 				</li>
 				<li>
-					<a href="#/remote">Remoto</a>
+					<a href="#/remote-vehicle">Remoto</a>
 				</li>
 			</ul>
 		</nav>
@@ -29,7 +29,13 @@
 		<div ng-view></div>
 	</div>
 </body>
+<script type="text/javascript"
+      src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAEUCp8M_BNBLH_De0n7NvEbfUgQPw9WUQ&sensor=false">
+    </script>
+<!--Angularjs -->
 <script type="text/javascript" src="lib/angular/angular.js"></script>
 <script type="text/javascript" src="lib/angular/angular-route.js"></script>
+<script type="text/javascript" src="lib/angular/angular-google-maps.min.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
+<script type="text/javascript" src="js/map.js"></script>
 </html>
