--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,13 @@
 		<nav class="menubar">
 			<ul class="navmenu">
 				<li>
-					<a href="#/map">Mapa</a>
+					<a href="#/map"><span><img src="img/map.png"></span>Mapa</a>
 				</li>
 				<li>
-					<a href="#/vehicle">Vehículos</a>
+					<a href="#/vehicle"><span><img src="img/vehicle.png"></span>Vehículos</a>
 				</li>
 				<li>
-					<a href="#/remote-vehicle">Remoto</a>
+					<a href="#/remote-vehicle"><span><img src="img/remote.png"></span>Remoto</a>
 				</li>
 			</ul>
 		</nav>
