Ulitima actualización by Nelson David

--- a/public/index.html
+++ b/public/index.html
@@ -13,15 +13,9 @@
 		</div>
 		<nav class="menubar">
 			<ul class="navmenu">
-				<li>
-					<a href="#/map"><span><img src="img/map.png"></span>Mapa</a>
-				</li>
-				<li>
-					<a href="#/vehicle"><span><img src="img/vehicle.png"></span>Vehículos</a>
-				</li>
-				<li>
-					<a href="#/remote-vehicle"><span><img src="img/remote.png"></span>Remoto</a>
-				</li>
+				<li><a href="#/map"><span><img src="img/map.png"></span>Mapa</a></li>
+				<li><a href="#/vehicle"><span><img src="img/vehicle.png"></span>Vehículos</a></li>
+				<li><a href="#/remote-vehicle"><span><img src="img/remote.png"></span>Remoto</a></li>
 			</ul>
 		</nav>
 	</aside>
