--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,16 @@
 	<title>Integratic</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<aside role="navigation" class="sidebar">
 		<div class="brand">
-			<a href="#">Integratic</a>
-		</div>
+                <img id="logo" src="img/integratic.jpg" >
+                <span id="title-brand"><h3>Integratic</h3></span>
+        </div>
 		<nav class="menubar">
 			<ul class="navmenu">
 				<li><a href="#/map"><span><img src="img/map.png"></span>Mapa</a></li>
