--- a/public/index.html
+++ b/public/index.html
@@ -4,21 +4,24 @@
 	<title>Integratic</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="shortcut icon" href="img/integratic.jpg">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<aside role="navigation" class="sidebar">
+	<header>
 		<div class="brand">
                 <img id="logo" src="img/integratic.jpg" >
                 <span id="title-brand"><h3>Integratic</h3></span>
         </div>
+	</header>
+	<aside role="navigation" class="sidebar">
 		<nav class="menubar">
 			<ul class="navmenu">
-				<li><a href="#/map"><span><img src="img/map.png"></span>Mapa</a></li>
-				<li><a href="#/vehicle"><span><img src="img/vehicle.png"></span>Vehículos</a></li>
-				<li><a href="#/remote-vehicle"><span><img src="img/remote.png"></span>Remoto</a></li>
+				<li><a href="#/map"><span><img src="img/location74.png"></span>Ubiación</a></li>
+				<li><a href="#/vehicle"><span><img src="img/sedan3.png"></span>Vehículos</a></li>
+				<li><a href="#/remote-vehicle"><span><img src="img/remote4.png"></span>Remoto</a></li>
 			</ul>
 		</nav>
 	</aside>
@@ -28,7 +31,7 @@
 </body>
 <script type="text/javascript"
       src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAEUCp8M_BNBLH_De0n7NvEbfUgQPw9WUQ&sensor=false">
-    </script>
+ </script>
 <!--Angularjs -->
 <script type="text/javascript" src="lib/angular/angular.js"></script>
 <script type="text/javascript" src="lib/angular/angular-route.js"></script>
