Update list by Nelson

--- a/public/index.html
+++ b/public/index.html
@@ -24,43 +24,49 @@
 	  <aside class="data-list" id="style-3">
 	     <div class="list-group">
 			<div class="list-group-item">
-			  <h4 class="list-group-item-heading"><a href=""><img src="./img/pointer.png"></a> Vehículo 1 </h4>
+			  <h4 class="list-group-item-heading"><a href=""><img src="./img/pointer.png"></a> VH-1/CBW-960 </h4>
 			  <p class="list-group-item-text">Estado: Apagado</p>
 			  <p class="list-group-item-text">Dirección: Calle 45 # 86-47</p>
 			  <p class="list-group-item-text"><a href="" class="list-group-item-text" >ver mas</a></p>
 			</div>
 			<div class="list-group-item">
-			  <h4 class="list-group-item-heading"><a href=""><img class="unpointer" src="./img/pointer.png"></a> Vehículo 2</h4>
+			  <h4 class="list-group-item-heading">
+			  	<a href=""><img class="unpointer" src="./img/pointer.png"></a> VH-2/DQB-123</h4>
 			  <p class="list-group-item-text">Estado: Apagado</p>
 			  <p class="list-group-item-text">Dirección: Calle 45 # 86-47</p>
 			  <p class="list-group-item-text"><a href="" class="list-group-item-text" >ver mas</a></p>
 			</div>
 			<div class="list-group-item">
-			  <h4 class="list-group-item-heading"><a><img class="unpointer" src="./img/pointer.png"></a> Vehículo 3</h4>
+			  <h4 class="list-group-item-heading">
+			  	<a href=" "><img class="unpointer" src="./img/pointer.png"></a> VH-3/SLR-315</h4>
 			  <p class="list-group-item-text">Estado: Encendido</p>
 			  <p class="list-group-item-text">Dirección: Calle 45 # 86-47</p>
 			  <p class="list-group-item-text"><a href="" class="list-group-item-text" >ver mas</a></p>
 			</div>
 			<div  class="list-group-item">
-			  <h4 class="list-group-item-heading"><a><img class="unpointer" src="./img/pointer.png"></a> Vehículo 4</h4>
+			  <h4 class="list-group-item-heading">
+			  	<a href=""><img class="unpointer" src="./img/pointer.png"></a> VH-4/NDP-955</h4>
 			  <p class="list-group-item-text">Estado: Apagado</p>
 			  <p class="list-group-item-text">Dirección: Calle 45 # 86-47</p>
 			  <p class="list-group-item-text"><a href="" class="list-group-item-text" >ver mas</a></p>
 			</div>
 			<div class="list-group-item">
-			  <h4 class="list-group-item-heading"><a><img class="unpointer" src="./img/pointer.png"></a> Vehículo 5</h4>
+			  <h4 class="list-group-item-heading">
+			  	<a href=""><img class="unpointer" src="./img/pointer.png"></a> VH-5/NYP-144</h4>
 			  <p class="list-group-item-text">Estado: Encendido</p>
 			  <p class="list-group-item-text">Dirección: Calle 45 # 86-47</p>
 			  <p class="list-group-item-text"><a href="" class="list-group-item-text" >ver mas</a></p>
 			</div>
 			<div class="list-group-item">
-			  <h4 class="list-group-item-heading"><a><img class="unpointer" src="./img/pointer.png"></a> Vehículo 6</h4>
+			  <h4 class="list-group-item-heading">
+			  	<a href=""><img class="unpointer" src="./img/pointer.png"></a> VH-6/NHV-911</h4>
 			  <p class="list-group-item-text">Estado: Encendido</p>
 			  <p class="list-group-item-text">Dirección: Calle 45 # 86-47</p>
 			  <p class="list-group-item-text"><a href="" class="list-group-item-text" >ver mas</a></p>
 			</div>
 			<div class="list-group-item">
-			  <h4 class="list-group-item-heading"><a><img class="unpointer" src="./img/pointer.png"></a> Vehículo 7</h4>
+			  <h4 class="list-group-item-heading">
+			  	<a href=""><img class="unpointer" src="./img/pointer.png"></a> VH-7/JIV-818</h4>
 			  <p class="list-group-item-text">Estado: Apagado</p>
 			  <p class="list-group-item-text">Dirección: Calle 45 # 86-47</p>
 			  <p class="list-group-item-text"><a href="" class="list-group-item-text" >ver mas</a></p>
