Creacion de dialogos registrar vehiculo y control remoto

--- a/public/index.html
+++ b/public/index.html
@@ -24,51 +24,46 @@
 	  <aside class="data-list" id="style-3">
 	     <div class="list-group">
 			<div class="list-group-item">
-			  <h4 class="list-group-item-heading"><a href=""><img src="./img/pointer.png"></a> VH-1/CBW-960 </h4>
-			  <p class="list-group-item-text">Estado: Apagado</p>
-			  <p class="list-group-item-text">Dirección: Calle 45 # 86-47</p>
+			  	<h4 class="list-group-item-heading"><a href=""><img src="./img/pointer.png"></a> Vehiculo-1 </h4>
+			  	<p class="list-group-item-text">Modelo: Optra 2013</p>
+			  	<p class="list-group-item-text">Placa: VCH-123 </p>
+			  	<p class="list-group-item-text"><a href="javascript:void(0)" onclick = "document.getElementById('lightreg').style.display='block';document.getElementById('fadereg').style.display='block'" class="list-group-item-text" >ver mas</a></p>	
+			</div>
+			<div class="list-group-item">
+			  <h4 class="list-group-item-heading"><a href=""><img class="unpointer" src="./img/pointer.png"></a> Vehiculo-2</h4>
+			  <p class="list-group-item-text">Modelo: Captiva 2014</p>
+			  <p class="list-group-item-text">Placa: DAZ-456</p>
 			  <p class="list-group-item-text"><a href="" class="list-group-item-text" >ver mas</a></p>
 			</div>
 			<div class="list-group-item">
-			  <h4 class="list-group-item-heading">
-			  	<a href=""><img class="unpointer" src="./img/pointer.png"></a> VH-2/DQB-123</h4>
-			  <p class="list-group-item-text">Estado: Apagado</p>
-			  <p class="list-group-item-text">Dirección: Calle 45 # 86-47</p>
-			  <p class="list-group-item-text"><a href="" class="list-group-item-text" >ver mas</a></p>
-			</div>
-			<div class="list-group-item">
-			  <h4 class="list-group-item-heading">
-			  	<a href=" "><img class="unpointer" src="./img/pointer.png"></a> VH-3/SLR-315</h4>
-			  <p class="list-group-item-text">Estado: Encendido</p>
-			  <p class="list-group-item-text">Dirección: Calle 45 # 86-47</p>
+			  <h4 class="list-group-item-heading"><a href=" "><img class="unpointer" src="./img/pointer.png"></a> Vehiculo-3</h4>
+			  <p class="list-group-item-text">Modelo: Mazda 3 2014</p>
+			  <p class="list-group-item-text">Placa: HCO-456</p>
 			  <p class="list-group-item-text"><a href="" class="list-group-item-text" >ver mas</a></p>
 			</div>
 			<div  class="list-group-item">
-			  <h4 class="list-group-item-heading">
-			  	<a href=""><img class="unpointer" src="./img/pointer.png"></a> VH-4/NDP-955</h4>
-			  <p class="list-group-item-text">Estado: Apagado</p>
-			  <p class="list-group-item-text">Dirección: Calle 45 # 86-47</p>
+			  <h4 class="list-group-item-heading"><a href=""><img class="unpointer" src="./img/pointer.png"></a> Vehiculo-4</h4>
+			  <p class="list-group-item-text">Modelo: Tucson 2014</p>
+			  <p class="list-group-item-text">Placa: VCH-345</p>
+			  <p class="list-group-item-text"><a href="" class="list-group-item-text" >ver mas</a></p>
+			</div>
+			<div class="list-group-item">
+			  <h4 class="list-group-item-heading"><a href=""><img class="unpointer" src="./img/pointer.png"></a> Vehiculo-5</h4>
+			  <p class="list-group-item-text">Modelo: Aveo 2014</p>
+			  <p class="list-group-item-text">Placa: CVZ-678</p>
+			  <p class="list-group-item-text"><a href="" class="list-group-item-text" >ver mas</a></p>
+			</div>
+			<div class="list-group-item">
+			  <h4 class="list-group-item-heading"><a href=""><img class="unpointer" src="./img/pointer.png"></a> Vehiculo-6</h4>
+			  <p class="list-group-item-text">Modelo: Clio 2010</p>
+			  <p class="list-group-item-text">Placa: DAZ-890</p>
 			  <p class="list-group-item-text"><a href="" class="list-group-item-text" >ver mas</a></p>
 			</div>
 			<div class="list-group-item">
 			  <h4 class="list-group-item-heading">
-			  	<a href=""><img class="unpointer" src="./img/pointer.png"></a> VH-5/NYP-144</h4>
-			  <p class="list-group-item-text">Estado: Encendido</p>
-			  <p class="list-group-item-text">Dirección: Calle 45 # 86-47</p>
-			  <p class="list-group-item-text"><a href="" class="list-group-item-text" >ver mas</a></p>
-			</div>
-			<div class="list-group-item">
-			  <h4 class="list-group-item-heading">
-			  	<a href=""><img class="unpointer" src="./img/pointer.png"></a> VH-6/NHV-911</h4>
-			  <p class="list-group-item-text">Estado: Encendido</p>
-			  <p class="list-group-item-text">Dirección: Calle 45 # 86-47</p>
-			  <p class="list-group-item-text"><a href="" class="list-group-item-text" >ver mas</a></p>
-			</div>
-			<div class="list-group-item">
-			  <h4 class="list-group-item-heading">
-			  	<a href=""><img class="unpointer" src="./img/pointer.png"></a> VH-7/JIV-818</h4>
-			  <p class="list-group-item-text">Estado: Apagado</p>
-			  <p class="list-group-item-text">Dirección: Calle 45 # 86-47</p>
+			  	<a href=""><img class="unpointer" src="./img/pointer.png"></a> Vehiculo-7</h4>
+			  <p class="list-group-item-text">Modelo: Tiida 2013</p>
+			  <p class="list-group-item-text">Placa: FGH-987</p>
 			  <p class="list-group-item-text"><a href="" class="list-group-item-text" >ver mas</a></p>
 			</div>
 		</div> 
@@ -79,7 +74,7 @@
 	  	<p class="select-all">Seleccionar todo</p>
 	    <a href = "javascript:void(0)" 
 	  onclick = "document.getElementById('light').style.display='block';document.getElementById('fade').style.display='block'">
-	  		<button class="btn-search">Registra</button>
+	  		<button class="btn-search">Registrar</button>
 	  	</a>
 	  </div>
 	  <!--Foooter copyright-->
@@ -91,12 +86,44 @@
 	</div>
 	<!--Google map -->
 	<div class="wrapper-map">
+		<!-- Vehicule register dialog -->
 		<div id="light" class="white_content">
+			<a href = "javascript:void(0)" onclick = "document.getElementById('light').style.display='none';document.getElementById('fade').style.display='none'"><img src="img/bad7.png"></a>
 			<h1>Registrar Vehículo</h1>
-			<a href = "javascript:void(0)" onclick = "document.getElementById('light').style.display='none';document.getElementById('fade').style.display='none'">Close</a>
-
+			<div class="login-card">
+				<form >
+					<input type="text" name="model" placeholder="Modelo">
+    				<input type="text" name="placa" placeholder="Placa">
+    				<input type="number" name="numtracker" placeholder="Numero del Localizador">
+    				<input type="submit" name="login" class="login login-submit" value="Registrar">
+				</form>
+			</div>
 		</div>
         <div id="fade" class="black_overlay"></div>
+        <!-- Remote control dialog -->
+        <div id="lightreg" class="white_content">
+			<a href = "javascript:void(0)" onclick = "document.getElementById('lightreg').style.display='none';document.getElementById('fadereg').style.display='none'"><img src="img/bad7.png"></a>
+			<h1>Informacion general</h1>
+			<div class="login-card">
+				<div class="row general">
+					<div class="col-md-6">Estado:</div>
+					<div class="col-md-6">Apagado</div>
+				</div>
+				<div class="row general">
+					<div class="col-md-6">Ubicacion:</div>
+					<div class="col-md-6">cra103 #11-40</div>
+				</div>				
+				<div class="row general">
+					<div class="col-md-6">Puertas:</div>
+					<div class="col-md-6">Cerradas</div>
+				</div>
+				<div class="row general" id="general-info-buttom">
+					<div class="col-md-6"><input type="submit" value="Encender/Apagar" /></div>
+					<div class="col-md-6"><input type="submit" value="Otra opcion"></div>
+				</div>
+			</div>
+		</div>
+        <div id="fadereg" class="black_overlay"></div>
 	    <my-maps id="map-canvas"></my-maps>
 	</div>
 </body>
