--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,16 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	
    <header role="navigation">
-	<!--AQUI VA EL LOGO, NOMBRE Y AVATAR (QUIÑÓNEZ)-->
+		<div class="col-md-2 col-sm-3 brand"> 
+		  <img src="img/integratic.jpg" class="logo">
+		  <h2 class="text-brand">Integratic</h2>	
+	    </div>
+	      
+	    <div class="data-user"> 
+			<h3 class="name-user">Juan Marmolejo</h3>
+			<img src="img/avatar.jpg" class="img-user">		
+	    </div>
     </header>
 	<div class="main">
 	<!--Textbox search-->	
