--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html ng-app="app">
+<html ng-app="app" lang="es" ng-clock> 
 <head>
 	<title>Integratic</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -7,7 +7,6 @@
 	<link rel="shortcut icon" href="img/integratic.jpg">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/animhate.css">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 </head>
 <body>
@@ -31,10 +30,10 @@
 	  <aside class="data-list" id="style-3">
 	     <div class="list-group" ng-controller="VehiculesController">
 			<div class="list-group-item" ng-repeat="vehicule in vehicules">
-			  	<h4 class="list-group-item-heading"><a href=""><img src="./img/pointer.png"></a> Vehiculo-{{$index+1}} </h4>
+			  	<h4 class="list-group-item-heading"><a href=""><img src="./img/pointer.png"></a> Vehiculo-{{vehicule.id}} </h4>
 			  	<p class="list-group-item-text">{{vehicule.model}}</p>
 			  	<p class="list-group-item-text">{{vehicule.placa}}</p>
-			  	<p class="list-group-item-text"><a href="javascript:void(0)" onclick = "document.getElementById('lightreg').style.display='block';document.getElementById('fadereg').style.display='block'" class="list-group-item-text" >ver mas</a></p>	
+			  	<p class="list-group-item-text"><a href="#/infoView" ng-click="searchVehicule(vehicule)" onclick="document.getElementById('lightreg').style.display='block';document.getElementById('fadereg').style.display='block';" class="list-group-item-text">ver mas</a></p>	
 		</div> 
 	  </aside>
 	  <!--vehicule registering options-->
@@ -62,7 +61,7 @@
 			<div class="login-card" ng-controller="VehiculesController">
 				<form>
 					<input type="text" name="model" placeholder="Modelo" ng-model="newVehicule.model">
-    				<input type="text" name="placa" placeholder="Placa" ng-model="newVehicule.placa">
+    				<input type="text" name="placa" placeholder="Placa" ng-model="newVehicule.placa" required>
     				<input type="number" name="numtracker" placeholder="Numero del Localizador" ng-model="newVehicule.trackerNumber">
     				<input type="submit" name="login" class="login login-submit" value="Registrar" ng-click="addVehicule()">
 				</form>
@@ -70,29 +69,7 @@
 		</div>
         <div id="fade" class="black_overlay"></div>
         <!-- Remote control dialog -->
-        <div id="lightreg" class="white_content animated zoomIn">
-			<a href = "javascript:void(0)" onclick = "document.getElementById('lightreg').style.display='none';document.getElementById('fadereg').style.display='none'"><img src="img/bad7.png"></a>
-			<h1>Informacion general</h1>
-			<div class="login-card">
-				<div class="row general">
-					<div class="col-md-6">Estado:</div>
-					<div class="col-md-6">Apagado</div>
-				</div>
-				<div class="row general">
-					<div class="col-md-6">Ubicacion:</div>
-					<div class="col-md-6">cra103 #11-40</div>
-				</div>				
-				<div class="row general">
-					<div class="col-md-6">Puertas:</div>
-					<div class="col-md-6">Cerradas</div>
-				</div>
-				<div class="row general" id="general-info-buttom">
-					<div class="col-md-6"><input type="submit" value="Encender/Apagar" /></div>
-					<div class="col-md-6"><input type="submit" value="Otra opcion"></div>
-				</div>
-			</div>
-		</div>
-        <div id="fadereg" class="black_overlay"></div>
+        <div ng-view=""></div>
 	    <my-maps id="map-canvas"></my-maps>
 	</div>
 </body>
@@ -104,5 +81,8 @@
 <script type="text/javascript" src="lib/angular/angular-route.js"></script>
 <script type="text/javascript" src="lib/angular/angular-google-maps.min.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
-<script type="text/javascript" src="js/map.js"></script>
+<script type="text/javascript" src="js/directives/map.js"></script>
+<script type="text/javascript" src="js/controllers/todoCtrl.js"></script>
+<script type="text/javascript" src="js/factory/vehicleFactory.js"></script>
+
 </html>
