--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 </head>
-<body>
+<body ng-controller="VehiculesController">
    <header role="navigation">
 		<div class="col-md-2 col-sm-3 brand"> 
 		  <img src="img/integratic.jpg" class="logo">
@@ -28,13 +28,16 @@
 	  </div>
 	  <!--vehicules aside list -->
 	  <aside class="data-list" id="style-3">
-	     <div class="list-group" ng-controller="VehiculesController">
+	     <div class="list-group" >
 			<div class="list-group-item" ng-repeat="vehicule in vehicules">
 			  	<h4 class="list-group-item-heading"><a href=""><img src="./img/pointer.png"></a> Vehiculo-{{vehicule.id}} </h4>
 			  	<p class="list-group-item-text">{{vehicule.model}}</p>
 			  	<p class="list-group-item-text">{{vehicule.placa}}</p>
-			  	<p class="list-group-item-text"><a href="#/infoView" ng-click="searchVehicule(vehicule)" onclick="document.getElementById('lightreg').style.display='block';document.getElementById('fadereg').style.display='block';" class="list-group-item-text">ver mas</a></p>	
-		</div> 
+			  	<p class="list-group-item-text">
+			  	<a href="#/infoView"  ng-click = "selectVehicule(vehicule)" onclick="document.getElementById('lightreg').style.display='block';document.getElementById('fadereg').style.display='block';" class="list-group-item-text">ver mas</a>
+			  	</p>
+			  </div>	
+			</div> 
 	  </aside>
 	  <!--vehicule registering options-->
 	  <div class="options">
@@ -69,7 +72,7 @@
 		</div>
         <div id="fade" class="black_overlay"></div>
         <!-- Remote control dialog -->
-        <div ng-view=""></div>
+        		<div ng-view=""></div>
 	    <my-maps id="map-canvas"></my-maps>
 	</div>
 </body>
