--- a/public/index.html
+++ b/public/index.html
@@ -23,13 +23,12 @@
 	<div class="main">
 	<!--search's textbox-->	
 	  <div class="input-group">
-		<input type="text" placeholder="Buscar..." required class="search">
-	    <input type="button" value="Buscar" class="btn-search">
+		<input type="text" placeholder="Buscar" required class="search" data-ng-model="sear">
 	  </div>
 	  <!--vehicules aside list -->
 	  <aside class="data-list" id="style-3">
 	     <div class="list-group" >
-			<div class="list-group-item" ng-repeat="vehicule in vehicules">
+			<div class="list-group-item" ng-repeat="vehicule in vehicules|filter:sear">
 			  	<h4 class="list-group-item-heading"><a href=""><img src="./img/pointer.png"></a> Vehiculo-{{vehicule.id}} </h4>
 			  	<p class="list-group-item-text">{{vehicule.model}}</p>
 			  	<p class="list-group-item-text">{{vehicule.placa}}</p>
