--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 	  <!--vehicule registering options-->
 	  <div class="options">
 	  	<input type="checkbox">
-	  	<p class="select-all">Seleccionar todo</p>
+	  	<p class="select-all">Marcar todo</p>
 	    <a href = "javascript:void(0)" 
 	  onclick = "document.getElementById('light').style.display='block';document.getElementById('fade').style.display='block'">
 	  		<button class="btn-search">Registrar</button>
