--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,9 @@
 	  </div>
 	  <!--vehicules aside list -->
 	  <aside class="data-list" id="style-3">
-	     <div class="list-group" >
+	     <div class="list-group" ng-controller="MapController">
 			<div class="list-group-item" ng-repeat="vehicule in vehicules|filter:sear">
-			  	<h4 class="list-group-item-heading"><a href=""><img src="./img/pointer.png"></a> Vehiculo-{{vehicule.id}} </h4>
+			  	<h4 class="list-group-item-heading"><a href="" ng-click="selectTheMarker($index)" class="map-pointer" id="{{$index}}"><img src="./img/pointer.png"></a> Vehiculo-{{vehicule.id}} </h4>
 			  	<p class="list-group-item-text">{{vehicule.model}}</p>
 			  	<p class="list-group-item-text">{{vehicule.placa}}</p>
 			  	<p class="list-group-item-text">
@@ -39,8 +39,8 @@
 			</div> 
 	  </aside>
 	  <!--vehicule registering options-->
-	  <div class="options">
-	  	<input type="checkbox">
+	  <div class="options" ng-controller="MapController">
+	  	<input type="checkbox" checked ng-click="selectAll()">
 	  	<p class="select-all">Marcar todo</p>
 	    <a href = "javascript:void(0)" 
 	  onclick = "document.getElementById('light').style.display='block';document.getElementById('fade').style.display='block'">
@@ -71,8 +71,8 @@
 		</div>
         <div id="fade" class="black_overlay"></div>
         <!-- Remote control dialog -->
-        		<div ng-view=""></div>
-	    <my-maps id="map-canvas"></my-maps>
+        	<div ng-view=""></div>
+	    	<div id="map-canvas"></div>
 	</div>
 </body>
 <script type="text/javascript"
@@ -83,7 +83,7 @@
 <script type="text/javascript" src="lib/angular/angular-route.js"></script>
 <script type="text/javascript" src="lib/angular/angular-google-maps.min.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
-<script type="text/javascript" src="js/directives/map.js"></script>
+<script type="text/javascript" src="js/directives/maps.js"></script>
 <script type="text/javascript" src="js/controllers/todoCtrl.js"></script>
 <script type="text/javascript" src="js/factory/vehicleFactory.js"></script>
 
