Actualizacion funciones mapas
Se pulio  la funcionalidad de los mapas

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
 	  </aside>
 	  <!--vehicule registering options-->
 	  <div class="options">
-	  	<input type="checkbox" checked ng-click="selectAll()">
+	  	<input type="checkbox" id="selectAll-checkbox" checked ng-click="selectAll()">
 	  	<p class="select-all">Marcar todo</p>
 	    <a href = "javascript:void(0)" 
 	  onclick = "document.getElementById('light').style.display='block';document.getElementById('fade').style.display='block'">
